--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <img src="/login-photo.png" alt="Audition Information">
+        <img src="main/login-photo.png" alt="Audition Information">
     </header>
     <script type="text/javascript" src="https://form.jotform.com/jsform/232307090698056"></script>
 </body>
