--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
             background-color: #454845ac;
             padding: 10px;
         }
-        /* Style for the image */
-        header img {
-            max-width: 100px; /* Adjust the width as needed */
-            height: auto;
+         header {
+            text-align: center;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="main/login-photo.png" alt="Audition Information">
+        <h1>Last Day's Audition Notes</h1>
     </header>
     <script type="text/javascript" src="https://form.jotform.com/jsform/232307090698056"></script>
 </body>
