--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
          header {
             text-align: center;
-            background-color: #4CAF50;
+            background-color: #243f68;
             color: white;
             padding: 10px;
         }
